objects/EUR_CRM_Price_Audit__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Account__c</fullName>
        <label>Account</label>
        <referenceTo>EUR_CRM_Account__c</referenceTo>
        <relationshipLabel>Price Audit (EU)</relationshipLabel>
        <relationshipName>Price_Check_EU</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>EUR_CRM_Audit_Datetime__c</fullName>
        <label>Audit Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Audit_Summary__c</fullName>
        <label>Audit Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Visit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Visit</label>
        <referenceTo>EUR_CRM_Visit__c</referenceTo>
        <relationshipName>Price_Check_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Price Audit (EU)</label>
    <listViews>
        <fullName>All_BE_Price_Audit</fullName>
        <columns>RECORDTYPE</columns>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Price_Audit__c.EUR_BE_OFF_Trade_Price_Audit</value>
        </filters>
        <label>All BE Price Audit</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RU_Price_Audit_Julia_Morar</fullName>
        <columns>RECORDTYPE</columns>
        <columns>EUR_CRM_Account__c</columns>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>EUR_CRM_Audit_Datetime__c</columns>
        <columns>EUR_CRM_Audit_Summary__c</columns>
        <columns>EUR_CRM_Visit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Price_Audit__c.EUR_RU_Off_Trade_Price_Audit</value>
        </filters>
        <label>RU Price Audit - Julia Morar</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_RU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>PRA-{0000000000}</displayFormat>
        <label>Price Audit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Price Audit (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_OFF_Trade_Price_Audit</fullName>
        <active>true</active>
        <label>EUR BE OFF Trade Price Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_OFF_Trade_Price_Audit</fullName>
        <active>true</active>
        <label>EUR DK OFF Trade Price Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Off_Trade_Price_Audit</fullName>
        <active>true</active>
        <label>EUR PT Off Trade Price Audit</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Off_Trade_Price_Audit</fullName>
        <active>true</active>
        <label>EUR RU Off Trade Price Audit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>